--- a/trunk/tp3/informe/Desarrollo4.tex
+++ b/trunk/tp3/informe/Desarrollo4.tex
@@ -96,7 +96,7 @@ Las funciones creadas para la ocasión son 3, y funciona de la siguiente manera:
 \item[Suma de los grados de los vertices reemplazados]: es la suma de los grados de los dos vertices a reemplazar.
 \end{description}
 
-Lamentablemente, no hemos conseguido que ninguna de las 3 funciones creadas aporte una reducción significativa en la cardinalidad del CD respecto de las otras dos. Es decir, no importa cómo seleccionemos los vertices a sacar e insertar de entre todos los posibles candidatos, siempre la cardinalidad final del CD será la misma, como se puede apreciar en el gráfico a continuación. \\
+Lamentablemente, no hemos conseguido que ninguna de las 3 funciones creadas aporte una reducción real en la cardinalidad del CD respecto de las otras dos. Es decir, no importa cómo seleccionemos los vertices a sacar e insertar de entre todos los posibles candidatos (con cual de las funciones), siempre la cardinalidad final del CD será la misma, como se puede apreciar en el gráfico a continuación. Como la cardinalidad de los CD obtenidos con las 3 funciones de ordenamiento es igual para todoas ellas, sólo dibujamos una, y mostramos su rendimiento contra el Greedy, respecto a la calidad de la solución encontrada. \\
 
 \begin{center}
 \includegraphics[width=17cm]{./graficos/comparacionSoluciones.png}
@@ -109,15 +109,22 @@ Al igual que al algoritmo Greedy, pudimos verificar que nuestro algoritmo se com
 Cabe destacar que, para el caso del greedy sólo se es óptimo para los arboles binarios, cuando nuestro algoritmo de búsqueda local funcion óptimanete para todas sus variantes.\\
 Además de éstos, que se comportan de la misma manera que el greedy, hemos encontrado una familia que es óptima para la heurística de búsqueda local, mejorando la solución obtenido por el algoritmo de greedy. Ésta familia se podría describir como los grafos en que el nodo de mayor grado no tiene ninguna conexión con los nodos hoja (es decir, sólo tiene un nodo adyacente). En el caso del greedy, el algoritmo tomaría al nodo que tiene mayor grado, por lo que además, debería tener en el CD a todos los nodos hoja. En cambio, nuestro algoritmo de busqueda local agarra esa solución no óptima, e intercambia y reemplaza nodos de forma tal de llegar a una solución óptima. \\
 
+\begin{center}
+\includegraphics[width=8cm]{./graficos/familiaLocal.png}
+\end{center}
+
+En el ejemplo anterior, podemos ver un ejemplo de la familia mencionada anteriormente. El algoritmo greedy empezará por el nodo con mayor grado, y luego le quedarán 2 vértices con grado 1 en los extremos, por lo que tendrá que tomar a ambos. En cambio, la heurísitca de búsqueda local empezará de, por ejemplo, ésta solución de 3 nodos, y luego intercambiará los nodos con grado 1 por sus vecinos, para luego eliminar al nodo con mayor grado, quedando de ésta forma un conjunto dominante óptimo y de menor cardinalidad que la el greedy.
+
  \subsection{Peor Caso}
  Es claro que, al ser una heurística, en muchos casos la solución obtenida por la búsqueda local no es la óptima, pero de todas formas, se trata de soluciones cercanas a ella. En éste sentido, se dan cuando los nodos de la solución de la cual se parte la búsqueda local, tienen muchas aristas conectadas entre si o a otros vértices ya dominados (los grados de los nodos son muy altos). Ésto hace que, por ejemplo, las estrategias elegidas no puedan intercambiar nodos, o quitar nodos de la solución de la que se parta y, sin embargo, en la práctica si exista una solución con menor cantidad de nodos. \\
-En particular, hemos encontrado que para la familia de los grafos de Mobius, al igual que para el algoritmo Greedy, nuestra heurística de búsqueda local no nos proporciona el conjunto dominante minimo. Más precisamente, corrimos el algoritmo con dos soluciones iniciales diferentes, para ver cuál éra su comportamiento. \\
-En primer lugar, le dimos comos solución inicial (es decir, como conjunto dominante) a todos los vértices del grafo. Para esos casos, nuestra heurística, incluso, obtenía un conjunto dominante con mayor cantidad de nodos que los obtenidos por el algoritmo greedy. Y por otro lado, probamos como otra solución inicial al conjunto dominante que nos devolvía el algoritmo greedy, y en todos los casos, la cardinalidad del CD no pudo ser reducida (claro está, en casos en que la solución no era la óptima). Es por ello que podemos afirmar que para la familia de grafos de Mobius, nuestro algoritmo nunca logrará encontrar una solución óptima, con excepción de si el CD que se le pasó como solución inicial ya es óptimo. \\
+Siguiendo la línea de análisis del algoritmo greedy, pudimos ver que nuevamente la familia de los grafos Grid, con nuestro algoritmo de búsqueda local, no logra una solución óptima. Sin embargo, si hemos notado que, si le proporcionamos a nuestro algoritmo como solución inicial un CD obtenido con la heurística greedy, existen casos en que la cardinalidad se reduce en hasta 3 nodos, pero aún así la solución no logra ser la óptima. Es decir, para algunos casos particulares de grafos pertenecientes a ésta familia, logramos encontrar una solución levemente mejor a la inicial (greedy), pero aún así, podemos ubicar la familia dentro los casos en que no se llega a la solución óptima, al menos en hasta 29 nodos, que es la cantidad máxima que pudimos calcular con el algoritmo exacto. \\
+Otra de las familias analizadas en la heurística greedy, la de los grafos de Mobius, está también dentro de ésta categoría en que el el algoritmo no nos proporciona la solución exacta. Pero, en ésta ocasión se diferencia con el Grid en que incluso no llega a mejor la solución inicial en ninguno de los casos estudiados. Más precisamente, corrimos el algoritmo con dos soluciones iniciales diferentes, para ver cuál éra su comportamiento. \\
+En primer lugar, le dimos comos solución inicial (es decir, como conjunto dominante) a todos los vértices del grafo. Para esos casos, nuestra heurística, incluso, obtenía un conjunto dominante con mayor cantidad de nodos que los obtenidos por el algoritmo greedy. Y por otro lado, probamos como otra solución inicial al conjunto dominante que nos devolvía el algoritmo greedy, y en todos los casos, la cardinalidad del CD no pudo ser reducida (claro está, en casos en que la solución no era la óptima). Ésto se debe a que el algoritmo greedy nos da como solución inicial nodos 3-regulares, lo que hace que el algoritmo de búsqueda local tenga pocos vecinos en los que buscar y poder intercambiarse. Es por ello que podemos afirmar que para la familia de grafos de Mobius, nuestro algoritmo nunca logrará encontrar una solución óptima, con excepción de si el CD que se le pasó como solución inicial ya es óptimo. \\
 Éstos resultados, eran de esperarse, ya que se trata de una heurísitca y sólo en algunos casos partículares (los mencionados en la sección Mejor Caso) se consiguen los mismos resultados que en los algoritmos exáctos. La idea, entonces, es intentar de construir las mejores estrategias para poder llegar a un resultado lo más exacto posible, para instancias en que sea imposible (al menos hoy en día) correr el algoritmo exácto, de orden exponencial. En éste caso particular, de la búsqueda local, seguramente haya muchas estrategias para mejorar o agregar, que nos aproximen a una solución un poco más exacta de la que encontramos hasta ahora, pero no pudimos dar con ellas en éste informe.
 
 
 \subsection{Tests y análisis}
-En primer lugar, y para tener acotar siempre la complejidad para el peor caso, en todos los gráficos que presentemos en ésta sección utilizaremos grafos de la familia de Mobius, por lo expuesto en la sección anterior respecto a su complejidad para el algoritmo de búsqueda local. Además, como comentamos también anteriormente, para ordenar los posibles nodos candidatos, utilizaremos la función de comparación \textbf{DiffGrados}.
+En primer lugar, y para acotar siempre la complejidad para el peor caso, en todos los gráficos que presentemos en ésta sección utilizaremos grafos de la familia de Mobius, por lo expuesto en la sección anterior respecto a su complejidad para el algoritmo de búsqueda local. Además, como comentamos también anteriormente, para ordenar los posibles nodos candidatos, utilizaremos la función de comparación \textbf{DiffGrados}.
 Una vez establecida qué función deberíamos utilizar para el 2x1, nos abocamos a testear el método de búsqueda local de acuerdo a la cantidad de nodos del grafo y el tiempo que le consume encontrar una solución. Vale aclarar que no tomamos en consideración el tiempo que nos consume encontrar una solución para darle a la búsqueda local, ya que consideramos que ello no es parte de nuestro algoritmo. De ésta forma, podemos ver que nuestro algoritmo se comporta de forma polinómica en función del tiempo, como lo analizamos en la sección de complejidad. Es decir, mientras mayor cantidad de nodos tenga la solución que nos proveen, y más relacionados estén entre sí dichos nodos (es decir, a través de aristas hacia nodos del mismo conjunto o del conjunto de los dominados), mayor tiempo requerirá calcular nuestra solución. \\
 El siguiente gráfico tiene como función mostrar la complejidad de nuestro algoritmo, que como dijimos tiene una complejidad de $O(n^4)$. El mismo muestra el tiempo que le toma a nuestro algoritmo encontrar la solucion, para grafos que parten desde 2 a 500 nodos. Como dijimos anteriormente, utilizamos grafos de la familia de Mobius. Además, se incluye en el gráfico la función $(1.05x^4)$, para mostrar que, aproximadamente, nuestro algoritmo se comporta de ésta manera.  \\
 \begin{center}
